radeon: clamp the internal FB map to the aperture size v2

We don't use the invisible memory yet and on cards with
large amounts of vram this can cause the top of GART
calculation to overflow.

Fixes bug fdo bug 24301:
http://bugs.freedesktop.org/show_bug.cgi?id=24301

v2: only clamp cards with more than 512 MB.  This seems
to cause problems on some older cards due to the way the
drm and ddx set up the internal memory map.